adding in initial code for responsive video embed

--- a/resources/styles/globals/openstax-bootstrap.less
+++ b/resources/styles/globals/openstax-bootstrap.less
@@ -35,7 +35,7 @@
 // @import "@{bootstrap-path}/media";
 @import "@{bootstrap-path}/list-group";
 @import "@{bootstrap-path}/panels";
-// @import "@{bootstrap-path}/responsive-embed";
+@import "@{bootstrap-path}/responsive-embed";
 // @import "@{bootstrap-path}/wells";
 @import "@{bootstrap-path}/close";
 
