--- a/resources/styles/_components.less
+++ b/resources/styles/_components.less
@@ -5,6 +5,7 @@
 @import './components/html/index';
 @import './components/exercise/step-card';
 @import './components/exercise/group';
+@import './components/exercise/preview';
 @import './components/breadcrumbs/step';
 @import './components/question';
 @import './components/close';
