fix preview less for building, adding exercise preview to demo

--- a/resources/styles/components/exercise/preview.less
+++ b/resources/styles/components/exercise/preview.less
@@ -83,7 +83,7 @@
       line-height: 1.4em;
       margin-bottom: 2rem;
       .answers-answer.correct {
-        color: @tutor-secondary;
+        color: @openstax-secondary;
         padding-left: 0;
         &::before {
           .fa;
@@ -109,7 +109,7 @@
         .feedback {
           display: none;
           margin-bottom: 5px;
-          color: @tutor-neutral;
+          color: @openstax-neutral;
           margin-left: 0;
           .sans(1.1rem, 1.1rem);
           font-style: italic;
@@ -122,18 +122,18 @@
       display: none;
       margin-bottom: 1.5rem;
       .header {
-        color: @tutor-neutral-darker;
+        color: @openstax-neutral-darker;
         .sans(1.3rem, 1.3rem);
       }
       .solution {
-        color: @tutor-neutral;
+        color: @openstax-neutral;
         .sans(1.1rem, 1.1rem);
         font-style: italic;
       }
     }
 
     .exercise-tags {
-      color: @tutor-neutral;
+      color: @openstax-neutral;
       font-size: 1.2rem;
       line-height: 1.4em;
 
@@ -161,9 +161,9 @@
     display: flex;
     justify-content: space-between;
     font-size: 1.1rem;
-    color: @tutor-neutral;
+    color: @openstax-neutral;
 
-    .exercise-identifier-link a { color: @tutor-neutral; }
+    .exercise-identifier-link a { color: @openstax-neutral; }
     .feedback-toggle {
       border: 0;
       background-color: transparent;
