fix answer table styling so that feedback lines up beneath answer, tags only show once per exercise as opposed to per question

--- a/resources/styles/components/exercise/preview.less
+++ b/resources/styles/components/exercise/preview.less
@@ -99,8 +99,9 @@
           }
         }
 
-        label {
+        label.answer-label {
           font-weight: 400;
+          display: table;
         }
 
         .answer-letter {
@@ -109,7 +110,7 @@
           &::after { content: counter(answer, lower-latin) ')'; }
         }
 
-        .answer-content {
+        .answer-answer {
           display: table;
           margin-bottom: 5px;
         }
