--- a/resources/styles/no-conflict.less
+++ b/resources/styles/no-conflict.less
@@ -8,6 +8,7 @@
 @import "@{bootstrap-path}/mixins";
 @import "@{fa-path}less/variables.less";
 @import "@{fa-path}less/mixins.less";
+@import "@{fa-path}less/core.less";
 
 .openstax {
   @import "@{bootstrap-path}/popovers";
