use the provide mixin for fa-icon instead of including core from fa

--- a/resources/styles/components/exercise/preview.less
+++ b/resources/styles/components/exercise/preview.less
@@ -92,7 +92,7 @@
           padding-left: 0;
 
           &::before {
-            .fa();
+            .fa-icon();
             float: left;
             margin-top: 0.15em;
             margin-right: .125em;
