--- a/resources/styles/demo.less
+++ b/resources/styles/demo.less
@@ -9,7 +9,7 @@
 
 }
 
-.exercisePreview-demo {
+.exercisePreview-demo, .exercise-demo, .multipartExercise-demo {
   max-width: 800px;
   margin: auto;
 }
