exercise question styling for multipart adjusted

--- a/resources/styles/components/question.less
+++ b/resources/styles/components/question.less
@@ -165,7 +165,10 @@
     max-width: 100%;
   }
 
-  .question-stem,
+  .question-stem {
+    margin-bottom: 0;
+  }
+
   .answers-table {
     margin-bottom: 20px;
   }
