--- a/resources/styles/components/exercise/step-card.less
+++ b/resources/styles/components/exercise/step-card.less
@@ -5,6 +5,10 @@
     font-style: italic;
   }
 
+  .exercise-stimulus {
+    margin-bottom: 20px;
+  }
+
   textarea {
     width: 100%;
     min-height: 8em;
