--- a/resources/styles/components/exercise/step-card.less
+++ b/resources/styles/components/exercise/step-card.less
@@ -39,4 +39,31 @@
   .card-body {
     margin-bottom: 4rem;
   }
+
+  .openstax-multipart-exercise-card-label {
+
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    left: -30px;
+    top: -20px;
+
+    &::before {
+      .x-icon-bg('multipart');
+      .x-icon-size(20px);
+      background-position: left;
+      content: ' ';
+      line-height: 20px;
+      padding-right: 25px;
+    }
+
+    &::after {
+      content: 'Multi-part question';
+      line-height: 20px;
+      font-weight: normal;
+      display: inline-block;
+      position: absolute;
+      .opacity(0.75);
+    }
+  }
 }
