label styling for multipart

--- a/resources/styles/components/exercise/step-card.less
+++ b/resources/styles/components/exercise/step-card.less
@@ -42,11 +42,7 @@
 
   .openstax-multipart-exercise-card-label {
 
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    left: -30px;
-    top: -20px;
+    padding-left: 25px;
 
     &::before {
       .x-icon-bg('multipart');
