--- a/resources/styles/components/question.less
+++ b/resources/styles/components/question.less
@@ -159,6 +159,22 @@
 
   .clearfix();
 
+  .detailed-solution {
+    margin-bottom: 1.5rem;
+
+    .header {
+      color: @openstax-neutral-darker;
+      margin-bottom: 0.5rem;
+      .sans(1.3rem, 1.3rem);
+    }
+
+    .solution {
+      color: @openstax-neutral;
+      .sans(1.1rem, 1.1rem);
+      font-style: italic;
+    }
+  }
+
   img {
     display: block;
     margin: auto;
