--- a/resources/styles/mixins/index.less
+++ b/resources/styles/mixins/index.less
@@ -60,6 +60,14 @@
   z-index: 2;
 }
 
+.sans(@size: 1.5rem, @line-height: 3rem) {
+  font-family: 'Lato', Helvetica, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: @size;
+  line-height: @line-height;
+}
+
 .make-shy() {
   .transform-origin(0 0);
   .translate(0, -@openstax-navbar-height);
