adding in related section info for exercise id link for CC only

--- a/resources/styles/components/exercise/step-card.less
+++ b/resources/styles/components/exercise/step-card.less
@@ -32,6 +32,11 @@
     color: @answer-label-color;
     font-size: 1.2rem;
     line-height: 1.2rem;
+
+    span.related-section {
+      display: block;
+      margin-bottom: 1rem;
+    }
   }
 
   &.deleted-reading,
