updating link positioning

--- a/resources/styles/components/exercise/step-card.less
+++ b/resources/styles/components/exercise/step-card.less
@@ -33,10 +33,12 @@
     font-size: 1.2rem;
     line-height: 1.2rem;
 
-    span.related-section {
-      display: block;
-      margin-bottom: 1rem;
-    }
+
+  }
+
+  .related-section {
+    display: inline-block;
+    margin-top: 3rem;
   }
 
   &.deleted-reading,
