--- a/resources/styles/components/exercise-preview/index.less
+++ b/resources/styles/components/exercise-preview/index.less
@@ -36,8 +36,8 @@
     .question-stem {
       .height-limited-panel(370px);
     }
-    .panel-body {
-      .height-limited-panel(720px);
+    .panel-body > .exercise-body {
+      .height-limited-panel(700px);
     }
   }
 
