Revert "Removed the exercise id from the card view."
This reverts commit 521e2d94c3918ea644eb4a7e93dca369b75d69a0.

--- a/resources/styles/components/exercise-preview/index.less
+++ b/resources/styles/components/exercise-preview/index.less
@@ -253,6 +253,11 @@
         content: '';
       }
     }
+    .exercise-uid {
+      font-size: 11px;
+      line-height: 11px;
+      color: @openstax-neutral-medium;
+    }
   }
 
   &.is-displaying-feedback {
